assets/css/style.css
/* ... */
#contact a:not(.btn-floating) {
  bottom: 6px;
  left: 20px;
  position: relative;
}

#experience .col.s12.m2 {
  text-align: center;
}

.fa-external-link:before {
  left: 3px;
  position: relative;
  top: 2px;
}

small {
  display: none;
}

.grey-text {
  color: #666 !important;
}

/* main .teal-text */

.teal-text {
  color: #008073 !important;
}

/* .teal-text {
  color: #0b5e86 !important;
} */

/* .teal */

.teal {
  background-color: #008073 !important;
}

/* .teal {
  background-color: #00695c !important;
} */

@media (min-width: 1200px) {
  #experience .container {
    width: 860px;
  }
}

@media (max-width: 1360px) {
  .card ul li {
    font-size: 14px;
    line-height: 200%;
    margin-left: 20px;
  }
}

@media (max-width: 1160px) {
  .card ul li {
    line-height: 150%;
  }
}

@media (max-width: 992px) {
  main {
    padding-left: 0px;
    padding-top: 64px;
  }
  ul.side-nav a {
    line-height: 100%;
    padding: 0;
    width: 100%;
  }
  nav {
    background: #fff;
    height: 64px;
    position: absolute;
  }
  nav a.button-collapse, nav a.button-collapse i {
    color: #009688;
    height: 56px;
    line-height: 56px;
  }
  h3 {
    padding: 20px 30px;
    margin-bottom: 40px;
  }
  .container {
    margin: 0 auto;
  }
  nav.hide-on-large.only.trigger {
    display: block;
    position: fixed;
    top: 0;
    z-index: 2;
  }
  .name-title {
    display: block;
    height: 100%;
    padding-top: 15px;
    text-align: center;
    width: 100%;
    position: absolute;
  }
  .name-title>span, .name-title>a {
    position: relative;
    line-height: 20px;
  }
  .name-title a {
    font-size: 22px;
    display: block;
  }
  .name-title span {
    display: block;
    font-size: 14px;
  }
  h3, .container {
    position: relative;
    top: 64px;
  }
  section#intro {
    margin-bottom: -64px;
  }
  .card .role {
    position: relative;
    right: initial;
    top: initial;
  }
}

@media (max-width: 600px) {
  h2 {
    font-size: 22px;
    line-height: 200%;
    margin: 30px 0 0;
  }
  #intro.section .container *:not(span) {
    padding: 0;
  }
  .card .card-content .card-title {
    font-size: 20px;
    line-height: 24px;
  }
  #experience span.card-title {
    text-align: center;
    display: block;
  }
  #experience span.card-title a {
    margin: 0;
  }
  i.mdi-navigation-close.right {
    position: relative;
    bottom: 15px;
  }
  #contact a:not(.btn-floating) {
    text-align: center;
    display: block;
    left: initial;
    bottom: initial;
  }
  #contact a.btn-floating.btn-large {
    display: block;
    text-align: center;
    margin: 0 auto;
  }
  #intro.section {
    background-position-x: 30%;
  }
}
/* Dark theme overrides */
body.dark-theme {
  background: #181a1b !important;
  color: #e0e0e0 !important;
}
/* Side Bar & Header*/
body.dark-theme .side-nav li.bold a[href="#about"] > span,
body.dark-theme #slide-out li.bold a[href="#about"] > span,
body.dark-theme .side-nav li.bold a[href="#experience"] > span,
body.dark-theme #slide-out li.bold a[href="#experience"] > span,
body.dark-theme .side-nav li.bold a[href="#projects"] > span,
body.dark-theme #slide-out li.bold a[href="#projects"] > span,
body.dark-theme .side-nav li.bold a[href="#skills"] > span,
body.dark-theme #slide-out li.bold a[href="#skills"] > span,
body.dark-theme .side-nav li.bold a[href="#education"] > span,
body.dark-theme #slide-out li.bold a[href="#education"] > span,
body.dark-theme .side-nav li.bold a[href="#contact"] > span,
body.dark-theme #slide-out li.bold a[href="#contact"] > span,
body.dark-theme .side-nav li.bold a[id="theme-toggle"] > span,
body.dark-theme #slide-out li.bold a[id="theme-toggle"] > span {
  color: #008080  !important;
}
body.dark-theme .side-nav.fixed li.logo,
body.dark-theme .side-nav.fixed li.logo > a#logo-container,
body.dark-theme .side-nav,
body.dark-theme nav.hide-on-large.only.trigger{
  background-color: #263238 !important;
}
body.dark-theme nav.hide-on-large.only.trigger .name-title span.black-text {
  color: #e0e0e0 !important;
}
body.dark-theme .readme, 
body.dark-theme .contactme {
  background: #008080 !important;
  color: #e0e0e0 !important;
}
body.dark-theme .readme:hover,
body.dark-theme .contactme:hover {
  background: #263238 !important; 
  color: #80cbc4 !important; 
}
body.dark-theme .caption h2,
body.dark-theme .caption h5 {
  color: #263238 !important;
  text-shadow: none !important;
}
body.dark-theme .caption h2 span.teal {
color: #e0e0e0 !important;
}
/* Main content */
/* Experience */
body.dark-theme #experience .card {
  background-color: #263238 !important;
  color: #e0e0e0 !important; 
  box-shadow: none !important;
}
body.dark-theme #experience .card .role.brown-text.text-darken-2 {
color: #008080 !important;
text-shadow: none !important;
}
/* projects */
body.dark-theme #projects .card {
  background-color: #263238 !important;
  color: #e0e0e0 !important; 
  box-shadow: none !important;
}
body.dark-theme #projects .card.medium .card-image {
  background-color: #263238 !important;
  color: #e0e0e0    !important;
}
/* Skills */
body.dark-theme #skills .card {
  background-color: #263238 !important;
  color: #e0e0e0 !important; 
  box-shadow: none !important;
}
body.dark-theme #skills .card-content h4.brown-text.light {
  color: #008080 !important;
  text-shadow: none !important;
}
/* Experience */
body.dark-theme #education .card {
  background-color: #263238 !important;
  color: #e0e0e0 !important; 
  box-shadow: none !important;
}

/* Turn the fixed sidebar into a column flexbox that fills the viewport */
.side-nav.fixed {
  display: flex;
  flex-direction: column;
  height: 100vh;      /* fill the entire height of the window */
  padding-top: 0;     /* ensure no extra offset at the top */
  padding-bottom: 10 !important;
}
/* Push only the toggle li down to the very bottom */
.side-nav.fixed li.sidebar-toggle {
  margin-top: auto;
}

